--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,18 @@
     <script src="./index.js"></script>
     <title>Game Test</title>
 </head>
+<style>
+    .img-with-text {
+    text-align: justify;
+    width: [width of img];
+}
+
+.img-with-text img {
+    display: block;
+    margin: 0 auto;
+}
+</style>
+
 <body>
     <div id="game-board">
 
